2008-03-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpDevice.cmake: YARP_MODULE_PATH overwritten incorrectly

2008-03-12  Giacomo Spigler  <spiglerg@gmail.com>
	* src/modules/SerialServoBoard: new SerialServo board device driver added.
	this adds support to the following serial servo controller boards:
	  -SSC32
	  -MiniSSC (II)
	  -Pontech SV203X
	  -Mondotronic SMI
	  -Pololu USB 16-Servo Controller
	  -PicoPic

2008-03-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpLibraryNames.cmake: include GSL library dependency
	automatically when libYARP_math is built.

2008-03-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/: mass update of examples, to replace use of
	"Network::init()" and "Network::fini()" with "Network yarp" in
	main.  The init/fini pair do not always do the right thing on
	windows if there are local port variables in main, so better to
	let the final cleanup be done by another local variable (the
	"yarp" object) with wider scope.  the "yarp" object simply calls
	init() in its constructor and fini() in its destructor.

2008-03-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpdev/CMakeLists.txt: corrected "WIN32 AND NOT CYGWIN"
	to "MSVC", which is probably what was intended.

2008-03-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpdev/CMakeLists.txt: "WIN32 AND NOT CYGWIN" -> "MSVC"

	* src/modules/CMakeLists.txt: "WIN32 AND NOT CYGWIN" -> "MSVC"

	* src/libYARP_OS/CMakeLists.txt: "WIN32 AND NOT CYGWIN" -> "MSVC"

	* conf/YarpProgram.cmake: "WIN32 AND NOT CYGWIN" -> "MSVC"

	* conf/YarpLibrary.cmake: "WIN32 AND NOT CYGWIN" -> "MSVC"

	* conf/YarpCompileModules.cmake: corrected "WIN32 AND NOT CYGWIN"
	to "MSVC", which is probably what was intended.

2008-02-26 Lorenzo Natale <nat@liralab.it>

	* src/libYARP_dev/include/yarp/dev/CanBusInterface.h: new can bus
	virtual interface.

2008-02-26  Lorenzo Natale <nat@liralab.it>
	* conf/FindGtkPlus.cmake: fixed an apparent bug which caused cmake