@@ -5,6 +5,10 @@ IF (COEXIST_WITH_YARP1 AND YARP1_FOUND)
    SUBDIRS(libYARP_OS_compat libYARP_sig_compat)
 ENDIF (COEXIST_WITH_YARP1 AND YARP1_FOUND)
 
+IF (YARP_HAS_MATH_LIB)
+ SUBDIRS(libYARP_math)
+ENDIF(YARP_HAS_MATH_LIB)
+
 # Device related libraries / executables
 SUBDIRS(libYARP_dev)
 IF (CREATE_DEVICE_LIBRARY_MODULES)
@@ -22,8 +26,4 @@ IF (CREATE_GUIS)
 ##      SUBDIRS(yarp-motorcontrolgui)
 #  ENDIF (GtkMM_FOUND)
 ENDIF(CREATE_GUIS)
-
-IF (YARP_HAS_MATH_LIB)
- SUBDIRS(libYARP_math)
-ENDIF(YARP_HAS_MATH_LIB)
 
